force-app/src/objects/TR1__BHTK_AutomationAPI__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting contains the settings for the Textkernel Binary Retrieval Service.</description>
    <fields>
        <fullName>TR1__Delete_After_Days__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Specifies the number of days to keep old Automation Events before they are deleted (0 to 99)</description>
        <inlineHelpText>Specifies the number of days to keep old Automation Events before they are deleted (0 to 99)</inlineHelpText>
        <label>Delete Automation Events after days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Named_Credential__c</fullName>
        <defaultValue>&quot;TK_Binary&quot;</defaultValue>
        <description>State here the Named Credential of Textkernel Binary Retrieval Service.</description>
        <inlineHelpText>State here the Named Credential of Textkernel Binary Retrieval Service.</inlineHelpText>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Retry_Attempts__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Specifies the number of Candidate Import retry attempts from 0 to 99.</description>
        <inlineHelpText>Specifies the number of Candidate Import retry attempts from 0 to 99.</inlineHelpText>
        <label>Import Retry Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Textkernel AutomationAPI</label>
</CustomObject>